force-app/main/default/objects/Contact/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Users</relationshipLabel>
    <relationshipName>Client_Users</relationshipName>
    <type>Lookup</type>
</CustomField>