force-app/main/default/objects/Contact/fields/Data_Subject_Account__c.field-meta.xml
<CustomField>
    <fullName>Data_Subject_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Subject Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Subjects</relationshipLabel>
    <relationshipName>Data_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>