force-app/main/default/objects/Contact/recordTypes/Client_User.recordType-meta.xml
<RecordType>
    <fullName>Client_User</fullName>
    <active>true</active>
    <description>Portal client user contact record type.</description>
    <label>Client User</label>
</RecordType>